# SoEx-Workflow

./: .gitignore  AI-PROVENANCE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  NOTICE  README.md  SoEx.Workflow.sln  THIRD-PARTY-LICENSES.md
docs/: README.md
docs/explanation/: consumption-models.md  crypto-shred-and-erasure.md  governance-design.md  runtimes-and-durability.md  the-architects-view.md  the-triggering-seam.md
docs/how-to/: author-a-native-flow.md  authorize-the-gateway-seam.md  choose-a-consumption-model.md  customize-pii-detection.md  make-crypto-shred-durable.md  run-erasure-maintenance.md  run-the-portable-flow.md  secure-a-pii-deployment.md  trigger-flows-from-outside.md  verify-it-yourself.md  write-a-step-component.md
docs/reference/: erasure-api.md  erasure-events.md  glossary.md  governance-services.md  governed-core.md  packages.md  runtime-matrix.md  transport-security.md  triggering.md  workflow-action.md
docs/tutorials/: 01-your-first-workflow.md  02-erase-a-subject.md
examples/: README.md  SoEx.Workflow.Examples.sln
examples/MultiManager/: DemoManager.cs  MultiManager.csproj  Program.cs  README.md
examples/PiiMaker/: PiiMaker.csproj
examples/PiiMaker/Hosts/Restate/sidecar-rs/: Cargo.toml  README.md
examples/PiiMaker/Hosts/Restate/sidecar-rs/src/: main.rs
examples/dev/: piimaker.sh  smoke-all-hosts.sh
hooks/: install.sh  pre-push
src/SoEx.Method.Workflow/: ErasureRouting.cs  SoEx.Method.Workflow.csproj  WorkflowMaintenance.cs  WorkflowSeam.cs  WorkflowUtility.cs
src/SoEx.Method.Workflow.Abstractions/: SoEx.Method.Workflow.Abstractions.csproj
src/SoEx.Transport.Workflow/: SoEx.Transport.Workflow.csproj  WorkflowActivityChannel.cs  WorkflowBinding.cs  (+3 more)
src/SoEx.Workflow.Restate/restate-sidecar-rs/: Cargo.toml
(+233 files in other folders)
